--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,5 @@ REACT_APP_SITE_URL="http://localhost:3002"
 
 #api
 REACT_APP_API_BASE_URL="http://localhost:8000"
+
+REACT_APP_COMPANY_NAME="Cocktailissimo"
